Fix slideshow link being unclickable where controls are visible

--- a/less/widget-slideshow.less
+++ b/less/widget-slideshow.less
@@ -71,9 +71,11 @@
     bottom: 0;
     min-height: 40px;
     margin: 0;
+    pointer-events: none;
 
     // Button
     .button {
+        pointer-events: all;
         position: absolute;
         top: 0;
         padding: 0;
